# mcu-abstraction-layer

./: README.md
GPIO/: CMakeLists.txt  DESIGN_PHILOSOPHY.md  README.md
GPIO/common/include/: common_gpio.hpp  common_gpio_builder.hpp  common_gpio_itf.hpp  common_gpio_types.hpp
GPIO/esp32/: common_gpio_esp32.cpp  gpio_pin_esp32.cpp  gpio_pin_esp32.hpp
GPIO/examples/: blink_example_esp32.cpp  blink_example_stm32.cpp  button_interrupt_example_esp32.cpp
GPIO/stm32l4/: gpio_pin_stm32.cpp  gpio_pin_stm32.hpp
docs/: CHANGELOG.md  README.md
docs/.obsidian/: workspace.json
docs/.obsidian/plugins/mermaid-tools/: data.json
docs/00-Document-Control/: Document-Governance-Rules.md  Naming-Convention.md  Official-Document-Register.md  README.md
docs/00-Document-Control/Companion-Formats/: README.md
docs/01-Product-Scope/: Product-Requirements.md  Project-Charter.md  README.md  Requirements-Baseline.md  Traceability-Matrix.md
docs/02-System-Architecture/: README.md  System-Context.md
docs/02-System-Architecture/ADR/: ADR-0001-why-did-I-create-this-abstract-layer.md  ADR-0002-layered-gpio-abstraction-with-core-and-extensions.md  ADR-Index.md
docs/04-HW-SW-Interface/: Interface-Index.md  Memory-Map.md  Pin-Assignment.md  README.md  Signal-Catalog.md
docs/05-Firmware-Design/: Boot-Sequence.md  Coding-Standard.md  Driver-HAL-Layer.md  Firmware-Architecture.md  Memory-Partition.md  README.md
docs/05-Firmware-Design/Module-Design/: README.md
docs/05-Firmware-Design/State-Machines/: README.md
docs/06-Communication-Protocol/: Interface-Control-Document.md  Message-Format.md  Protocol-Overview.md  README.md
docs/07-Quality-Test/: Compliance-Matrix.md  Defect-Taxonomy-RCA.md  README.md  Test-Plan.md  VnV-Strategy.md
docs/07-Quality-Test/Test-Cases/: README.md
docs/08-Build-Release/: Build-Release-Process.md  README.md  Versioning-Branching.md
docs/08-Build-Release/Release-Notes/: README.md
docs/09-Project-Management/: Decision-Log.md  Glossary.md  README.md  Risk-Register.md
docs/10-Operations-Support/: Diagnostics.md  Field-Issue-Playbook.md  README.md
docs/11-AI-Governance/: AI-Code-Review-Checklist.md  AI-Mandatory-Rules.md  README.md
docs/12-Templates/: README.md  TEMPLATE-ADR.md  TEMPLATE-HW-SW-Interface.md  TEMPLATE-Module-Design.md  TEMPLATE-Release-Note.md  TEMPLATE-Requirement.md  TEMPLATE-State-Machine.md  TEMPLATE-Test-Case.md
docs/99-Archive/: README.md
docs/Review/: blink.md  cmake.md
